<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Detail">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="166dp"
        android:layout_height="205dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puppies_name"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/img_item_photo" />

    <TextView
        android:id="@id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tinggi_badan"
            android:layout_width="381dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tinggi_badan"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_description" />

        <TextView
        android:id="@+id/puppies_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/puppies_height"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tinggi_badan" />

    <TextView
        android:id="@+id/berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/berat_badan"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/puppies_height" />

    <TextView
        android:id="@+id/puppies_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/puppies_weight"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/berat_badan" />

    <TextView
        android:id="@+id/harapan_hidup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/harapan_hidup"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/puppies_weight"/>

    <TextView
        android:id="@+id/life_expectancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/life_expectancy"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/harapan_hidup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>